@@ -1,6 +1,11 @@
 2010-01-18  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/data/postgresql.py:
+	Support schema identification for db functions.
+
+2010-01-18  Milan Zamazal  <pdm@brailcom.org>
+
+	* lib/pytis/data/postgresql.py:
 	Cache table schemas by actual table names, don't assume they are always the same.
 
 2010-01-14  Milan Zamazal  <pdm@brailcom.org>
